--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm shifana B.sc Computer science student.</p>
+            <p>I'm shifana B.Sc Computer Science.</p>
 
         </div>
     </section>
@@ -123,8 +123,8 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>Bharathidasan university</p>
-            <p>Menakshi chandrasekaran college</p>
+            <p>Bharathidasan University</p>
+            <p>Meenakshi Chandrasekaran College</p>
             <p>Bsc computer science</p>
             
         </div>
@@ -147,7 +147,7 @@
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">personal portfolio</a></li> 
+                <li><a href="#">Personal portfolio</a></li> 
                 <!-- Add more project links here -->
             </ul>
         </div>
@@ -158,14 +158,14 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="Shifana_resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="http://drive.google.com/Shifana_resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
     </section>
 
     <footer>
-        <p>&copy; 2025 Shifana S</p>
+        <p>&copy; 2025 Shifana </p>
     </footer>
 
     <script>
