--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm shifana B.Sc Computer Science.</p>
+            <p>I'm shifana B.sc Computer science student.</p>
 
         </div>
     </section>
@@ -123,9 +123,9 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-    
-
-            <p>B.Sc Computer Science</p>
+            <p>Bharathidasan university</p>
+            <p>Meenakshi chandrasekaran college</p>
+            <p>Bsc computer science</p>
             
         </div>
     </section>
@@ -147,7 +147,7 @@
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">Personal Portfolio</a></li> 
+                <li><a href="#">personal portfolio</a></li> 
                 <!-- Add more project links here -->
             </ul>
         </div>
@@ -165,7 +165,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Shifana </p>
+        <p>&copy; 2025 Shifana S</p>
     </footer>
 
     <script>
