--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="shifana_resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="shifana-2511/github.io/Digital-portfoli/shifana_resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
